--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <link href="/{{BOOTSTRAP}}/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    {# <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"> #}
 
     <!-- Custom styles for this template -->
     <link href="/css/ags2go.1.css" rel="stylesheet">
@@ -72,6 +72,6 @@
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 <script src="/{{BOOTSTRAP}}/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+{# <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script> #}
 </body>
 </html>
