--- a/templates/widget.html
+++ b/templates/widget.html
@@ -3,7 +3,7 @@
 
 {% block main %}
 
-<div id="widget_div" style="clear: both;"></div>
+
 
 <link rel="stylesheet" type="text/css" href="/js/{{EXT_VER}}/resources/css/ext-all.css">
 
@@ -12,7 +12,23 @@
 
 {# <link rel="stylesheet" href="/css/ags2go.1.css" /> #}
 
+<script type="text/javascript" charset="utf-8" src="/js/ags/model/Abbrev.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/model/AbbrevItem.js"></script>
+
+<script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevItemsStore.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevStore.js"></script>
+
+<script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevsGrid.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevView.js"></script>
+
 <script type="text/javascript" charset="utf-8" src="/js/ags/main.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/MainViewport.js"></script>
+
+
+
+
+
+<div id="widget_div" style="clear: both;"></div>
 
 <script>
 
