--- a/templates/widget.html
+++ b/templates/widget.html
@@ -12,14 +12,22 @@
 
 {# <link rel="stylesheet" href="/css/ags2go.1.css" /> #}
 
-<script type="text/javascript" charset="utf-8" src="/js/ags/model/Abbrev.js"></script>
-<script type="text/javascript" charset="utf-8" src="/js/ags/model/AbbrevItem.js"></script>
+{# <script type="text/javascript" charset="utf-8" src="/js/ags/model/Abbrev.js"></script> #}
+{# <script type="text/javascript" charset="utf-8" src="/js/ags/model/AbbrevItem.js"></script> #}
+{# <script type="text/javascript" charset="utf-8" src="/js/ags/model/Group.js"></script> #}
 
 <script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevItemsStore.js"></script>
-<script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevStore.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevsStore.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/group/GroupsStore.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/group/HeadingsStore.js"></script>
+
+<script type="text/javascript" charset="utf-8" src="/js/ags/stores_models.js"></script>
 
 <script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevsGrid.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevView.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/group/GroupsGrid.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/group/HeadingsGrid.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/group/GroupView.js"></script>
 
 <script type="text/javascript" charset="utf-8" src="/js/ags/main.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/MainViewport.js"></script>
