--- a/templates/base.html
+++ b/templates/base.html
@@ -56,6 +56,7 @@
 <h1>Main Content</h1>
 
 {% endblock main %}
+{% comment %}
 <div class="container">
     <hr>
 
@@ -63,7 +64,7 @@
         <p>&copy; 2016 Company, Inc.</p>
     </footer>
 </div>
-
+{% endcomment %}
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
