making nav soon

--- a/templates/home.html
+++ b/templates/home.html
@@ -23,9 +23,9 @@
             <p><a class="btn btn-default" href="http://www.agsdataformat.com/" role="button">AGS &raquo;</a></p>
         </div>
         <div class="col-md-4">
-            <h2>AGS4 Definitions</h2>
+            <h2>AGS4 Data Dictionary</h2>
             <p>The AGS4 spec comes with prefiend groups/tabs, headings/columns and data formats units etc</p>
-            <p><a class="btn btn-default" href="/widget" role="button">View Definitions &raquo;</a></p>
+            <p><a class="btn btn-success" href="/widget" role="button">View Definitions &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>Examples</h2>
