--- a/templates/widget.html
+++ b/templates/widget.html
@@ -5,7 +5,7 @@
 
 
 
-<script type="text/javascript" charset="utf-8" src="/js/ags/main.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/base_defs.js"></script>
 
 <script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevItemsStore.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/abbrev/AbbrevsStore.js"></script>
@@ -34,7 +34,7 @@ var AGS_VERSION = 4;
 
 Ext.onReady(function(){
 
-VP = Ext.create("Ags.MainViewport", {});
+VP = Ext.create("ags.MainViewport", {});
 
 });
 
