--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 
     <link rel="icon" href="/favicon.ico">
 
-    <title> {{ site.name }}</title>
+    <title>{{ page.Title }} {{ site.name }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/{{BOOTSTRAP}}/css/bootstrap.min.css" rel="stylesheet">
@@ -53,6 +53,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                {% for n in nav %}
+                <li {%if n.Url == p.Url %}class="active"{% endif %}><a href="{{n.Url}}">{{n.Title}}</a></li>
+                {% endfor %}
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/widget">Widget</a></li>
