--- a/templates/view.html
+++ b/templates/view.html
@@ -10,6 +10,7 @@
 
 
 
+<script type="text/javascript" charset="utf-8" src="/js/ags/viewer/GroupGrid.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/AGSViewer.js"></script>
 
 
