--- a/templates/view.html
+++ b/templates/view.html
@@ -11,6 +11,7 @@
 
 
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/GroupGrid.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/viewer/GroupView.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/AGSViewer.js"></script>
 
 
@@ -24,9 +25,7 @@
 var AGS_VERSION = 4;
 
 Ext.onReady(function(){
-
-VP = Ext.create("ags.viewer.AGSViewer", {});
-
+    Ext.create("ags.viewer.AGSViewer", {});
 });
 
 </script>
