--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -9,7 +9,8 @@
 <script type="text/javascript" charset="utf-8" src="/js/ags/base_defs.js"></script>
 
 
-
+<script type="text/javascript" charset="utf-8" src="/js/ags/examples/ExamplesDialog.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/viewer/UploadDialog.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/GroupGrid.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/GroupView.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/AGSViewer.js"></script>
