--- a/templates/about.html
+++ b/templates/about.html
@@ -6,31 +6,9 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1>Welcome to AGS file format</h1>
-        <p>Blah blah about AGS and the file format TODO</p>
-        <p>The AGS file format is used extensively in geotechnical engineering. This site is experiment in creating a microservice online for all :=)</p>
-        <p><a class="btn btn-primary btn-lg" href="/about" role="button">Learn more &raquo;</a></p>
+        <h1>ABOUT - TODO</h1>
     </div>
 </div>
 
-<div class="container">
-    <!-- Example row of columns -->
-    <div class="row">
-        <div class="col-md-4">
-            <h2>The AGS File Format</h2>
-            <p>We are downstream from the "official upstream source" at http://www.agsdataformat.com/</p>
-            <p><a class="btn btn-default" href="http://www.agsdataformat.com/" role="button">AGS &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>AGS4 Definitions</h2>
-            <p>The AGS4 spec comes with prefiend groups/tabs, headings/columns and data formats units etc</p>
-            <p><a class="btn btn-default" href="/widget" role="button">View Definitions &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-            <h2>Examples</h2>
-            <p>Some example spreadsheets</p>
-            <p><a class="btn btn-info" href="/examples" role="button">Go &raquo;</a></p>
-        </div>
-    </div>
-</div>
+
 {% endblock main %}
