--- a/templates/base.html
+++ b/templates/base.html
@@ -54,12 +54,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 {% for n in nav %}
-                <li {%if n.Url == p.Url %}class="active"{% endif %}><a href="{{n.Url}}">{{n.Title}}</a></li>
+                <li {%if n.Url == page.Url %}class="active"{% endif %}><a href="{{n.Url}}">{{n.Title}}</a></li>
                 {% endfor %}
-                <li class="active"><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/widget">Widget</a></li>
-
             </ul>
         </div><!--/.nav-collapse -->
     </div>
