--- a/static/css/ags2go.1.css
+++ b/static/css/ags2go.1.css
@@ -1,566 +1,15 @@
 
-body{
-	background-color: white;
+.navbar {
+	border-radius: 0;
 }
 
-
-
-#bar_top_1{
-	background-color: #6679B8;
-	height: 7px;
-}
-#bar_top_2{
-	background-color: white;
-	height: 2px;
-}
-#bar_top_3{
-	background-color: #6679B8;
-	height: 2px;
-}
-
-#page_container{
-	margin: 0px auto;
-	max-width: 950px;
-	font-family: sans-serif;
-}
-
-
-
-#page_header{
-	width: 30%;
-	float: right;
-	-moz-box-shadow: 3px 3px 4px #6679B8;
-	-webkit-box-shadow: 3px 3px 4px #6679B8;
-	box-shadow: 3px 3px 4px #6679B8;
-}
-
-#page_header h1{
-	font-size: 14pt;
-	font-family: sans-serif;
-	margin-left: 10px;
-	padding: 5px;
-	text-align: right;
-}
-
-#page_header h1 a{
-	color: #6679B8;
-	text-decoration: none;
-}
-
-/* top nav container */
-#top_nav{
-	margin-top: 30px;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	xxbackground-color: #C9D1E6;
-	clear: right;
-}
-
-
-.navlist{
-	padding: 3px 0;
-	smargin-left: 0;
-	border-bottom: 1px solid #aaaaaa;
-}
-
-.navlist li{
-	list-style: none;
-	margin: 0px;
-	display: inline;
-}
-
-.navlist li a{
-	padding: 3px 0.5em;
-	margin-left: 10px;
-	border: 1px solid #aaaaaa;
-	border-bottom: none;
-	background: #dddddd;
-	text-decoration: none;
-	font: normal 10pt  sans-serif;
-	color: #444444;
-	min-width: 50px;
-}
-
-
-.navlist li a:hover{
-	color: #000;
-	background: #eeeeee;
-}
-
-.navlist li a.selected{
-	background: white;
-	border-bottom: 1px solid white;
-}
-
-#page_content{
-	ssbackground-color: pink;
-	ssmargin: 10px;
-	smargin-top: 50px;
-	font-family: sans-serif;
-	font-size: 10pt;
-}
-
-#DEDADcontent{
-	ssbackground-color: pink;
-	font-family: sans-serif;
-	margin: 20px 40px 20px 40px;
-}
-
-#page_content p{
-	margin-top: 5px;
-	margin-bottom: 10px;
-}
-
-
-/***************************************************/
-/*   */
-/***************************************************/
-
-
-/***************************************************/
-/*   */
-/***************************************************/
-
-
-
-/***************************************************/
-/*   */
-/***************************************************/
-
-.bread{
-	margin-top: 5px;
-	margin-left: 15px;
-	font: bold 12px  sans-serif;
-	color: #aaaaaa;
-}
-
-.bread li
-{
-	list-style: none;
-	display: inline;
-}
-
-.bread li a
-{
-padding: 1px 10px 1px 10px;
-margin-left: 5px;
-margin-right: 5px;
-background: #eeeeee;
-text-decoration: none;
-border: 1px solid #dddddd;
--moz-border-radius: 5px;
-border-radius: 5px;
-color: #666666;
-}
-
-
-.bread li a:hover
-{
-border-color: #999999;
-background-color: #C9D1E6;
-text-decoration: none;
-color: black;
-}
-.
-
-/************************************************/
-
-.toolbar{
-	background: -webkit-gradient(linear, left top, right bottom, from(white), to(#efefef));
-	margin-bottom: 5px;
-	height: 30px;
-	-moz-box-shadow: 1px 1px 2px #dddddd;
-	-webkit-box-shadow: 1px 1px 2px #dddddd;
-	box-shadow: 1px 1px 2px #dddddd;
-	
-}
-.toolbar h1{
-	font-size: 20pt;
-	float: right;
-	padding-right: 5px;
-	text-align: right;
-	color: #333333;
-}
-.toolbar h2{
-	font-size: 8pt;
-	float: right;
-	padding-right: 10px;
-	color: #999999;
-}
-
-
-/***************************************************/
-/*  Formats Block */
-/***************************************************/
-
-.formats_block{
-	ssbackground-color: yellow;
-	font-family: sans-serif;
-	margin-top: 20px;
-}
-
-.formats_block h3{
-	background-color: #efefef;
-	border-top: 1px solid #aaaaaa;
-	sborder-bottom: 1px solid #aaaaaa;
-	padding: 5px;
+.nav a {
 	font-size: 11pt;
 }
 
-.formats_block ul{
-	list-style-type: disc;
-	margin-left: 30px;
+.ags_group_row {
+	background-color: #FFFBAC;
+	border-bottom: 1px solid #444444;
+	border-top: 1px solid #444444;
 }
 
-.formats_block li{
-	padding: 3px;
-}
-.formats_block a{
-	text-decoration: none;
-	font-size: 10pt;
-	color: blue;
-}	
-.formats_block a:hover{
-	text-decoration: underline;
-	font-size: 10pt;
-	color: #000099;
-}
-
-
-/***************************************************/
-/*  Group Headings  */
-/***************************************************/
-
-#page_content h1.group_heading{
-	font-size: 9pt;
-	font-family: sans-serIf;
-	border-bottom: 1px solid #cccccc;
-	padding: 5px;
-	text-align: left;
-	width: 75%;
-	color: #555555;
-}
-#page_content h1.group_label{
-	background-color: #3A4569;
-	font-family: sans-serif;
-	font-size: 28pt;
-	padding: 2px 10px 2px 0px;
-	float: right;
-	width: 250px;
-	text-align: right;
-	border-bottom: 1px solid #dddddd;
-	border-right: 1px solid #dddddd;
-	color: #efefef;
-}
-
-#page_content h1.abbrev_heading{
-	font-size: 9pt;
-	font-family: sans-serif;
-	border-bottom: 1px solid #efefef;
-	padding: 5px;
-	text-align: left;
-	width: 75%;
-	color: #555555;
-}
-#page_content h1.abbrev_label{
-	background-color: #6E4767;
-	font-family: sans-serif;
-	font-size: 28pt;
-	padding: 2px 10px 2px 0px;
-	float: right;
-	width: 250px;
-	text-align: right;
-	border-bottom: 1px solid #dddddd;
-	border-right: 1px solid #dddddd;
-	color: #efefef;
-}
-/***************************************************/
-/* Ags Table  */
-/***************************************************/
-
-.ags_top_table{
-	font-family: sans-serif;
-	font-size: 9pt;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	width: 100%;
-}
-.ags_top_table tr{
-	sborder-bottom: 1px solid #dddddd;
-}
-.ags_top_table td{
-	padding: 5px 5px;
-	margin: 5px;
-	font-size: 9pt;
-	border-bottom: 1px solid #dddddd;
-}
-
-.ags_top_table th{
-	padding: 5px 5px;
-	margin: 5px;
-	sborder-top: 1px solid #cccccc;
-	border-right: 1px solid #cccccc;
-	dbackground-color: #eeeeee;
-	text-align: right;
-	font-size: 8pt;
-}
-
-.ags_top_table td b{
-	color: #3A4569;
-	font-size: 11pt;
-}
-
-
-/***************************************************/
-/*   */
-/***************************************************/
-
-#page_content h2.group_headings_title {
-	background-color: #3A4569;
-	border-top: 1px solid #aaaaaa;
-	border-bottom: 1px solid #aaaaaa;
-	sborder-bottom: 1px solid #aaaaaa;
-	padding: 5px;
-	font-size: 11pt;
-	font-family: sans-serif;
-	color: #efefef;
-}
-#page_content h2.abbrev_headings_title {
-	background-color: #6E4767;
-	border-top: 1px solid #aaaaaa;
-	border-bottom: 1px solid #aaaaaa;
-	sborder-bottom: 1px solid #aaaaaa;
-	padding: 5px;
-	font-size: 11pt;
-	font-family: sans-serif;
-	color: #efefef;
-}
-/*
-.ags_headings_table{
-	font-family: sans-serif;
-	font-size: 8pt;
-	width: 100%;
-}
-.ags_headings_table tr{
-	border-bottom: 1px solid #dddddd;
-}
-
-.ags_headings_table tr:hover{
-	background-color: #A5FFA5;
-}
-
-.ags_headings_table th{
-	padding: 5px 5px;
-	background-color: #efefef;
-}
-.ags_headings_table td{
-	padding: 5px 5px;
-	border-right: 1px solid #eeeeee;
-}
-*/
-/***************************************************/
-/*   */
-/***************************************************/
-/*
-.ags_versions_table{
-	font-family: sans-serif;
-	font-size: 10t;
-}
-.ags_versions_table tr{
-	border-bottom: 1px solid #dddddd;
-}
-.ags_versions_table tr:hover{
-	background-color: #F9FFC9;
-}
-
-.ags_versions_table th{
-	padding: 5px 5px;
-	background-color: #efefef;
-}
-.ags_versions_table td{
-	padding: 10px 10px;
-	sborder-right: 1px solid #eeeeee;
-}
-.ags_versions_table a{
-	display: block;
-	text-decoration: none;
-	color: blue;
-	text-align: center;
-}
-.ags_versions_table a:hover{
-	text-decoration: underline;
-	ssbackground-color: #dddddd;
-	sstext-align: center;
-}
-*/
-/***************************************************/
-/*   */
-/***************************************************/
-
-.ags_index_table{
-	font-family: sans-serif;
-	font-size: 9pt;
-	margin-top: 10px;
-	width: 100%;
-	clear: both;
-}
-.ags_index_table tr{
-	border-bottom: 1px solid #dddddd;
-}
-.ags_index_table td{
-	padding: 5px 5px;
-	margin: 5px;
-}
-
-.ags_index_table th{
-	padding: 5px 5px;
-	margin: 5px;
-	border-top: 1px solid #cccccc;
-	border-bottom: 1px solid #cccccc;
-	sbackground-color: #eeeeee;
-}
-
-.ags_index_table tr.groups{
-	background-color: #3A4569;
-	color: #efefef;
-}
-.ags_index_table tr.abbrevs th{
-	background-color: #6E4767;
-	color: #efefef;
-}
-.ags_index_table tr.abbrevs:hover{
-	background-color: #DAADDF;
-}
-.ags_index_table tr{
-	border-bottom: 1px solid #dddddd;
-}
-
-/***************************************************/
-/*  AGS TaBLE */
-/***************************************************/
-
-.ags_table{
-	font-family: sans-serif;
-	font-size: 9pt;
-	width: 100%;
-}
-.ags_table tr{
-	border-bottom: 1px solid #dddddd;
-}
-
-.ags_table tr:hover{
-	background-color: #FFF985;
-	border-color: #999999;
-}
-.ags_table tr.selected{
-	ssbackground-color: pink;
-}
-.ags_table th{
-	padding: 5px 5px;
-	background-color: #efefef;
-}
-.ags_table td{
-	padding: 5px 5px;
-}
-.ags_table td.heading_code{
-	sbackground-color: #efefef;
-	color: #3A4569;
-	font-family: Courier, monospace;
-}
-.ags_table td.abbrev_code{
-	sbackground-color: #efefef;
-	color: #841360;
-	font-family: Courier, monospace;
-}
-.ags_table a{
-	text-decoration: none;
-	color: blue;
-	
-	
-}
-.ags_table a:hover{
-	text-decoration: underline;
-	color: #000099;	
-}
-
-
-
-/***************************************************/
-/*  AGS LIST TaBLE */
-/***************************************************/
-
-.ags_list_table{
-	font-family: sans-serif;
-	font-size: 8pt;
-	margin-top: 10px;
-}
-.ags_list_table tr{
-	ssborder-bottom: 1px solid white;
-	ssborder-top: 1px solid #dddddd;
-	ssmargin: 2px;
-}
-
-
-.ags_list_table  tr.group:hover{
-	background-color: #BBD3F7;
-}
-.ags_list_table tr.group_selected{
-	background-color: #BBD3F7;
-}
-.ags_list_table  tr.abbrev:hover{
-	background-color: #DAADDF;
-}
-.ags_list_table tr.abbrev_selected{
-	background-color: #DAADDF;
-}
-
-.ags_list_table th{
-	padding: 5px 5px;
-	background-color: #efefef;
-}
-.ags_list_table td{
-	padding: 5px 5px;
-	ssoverflow: hidden;
-}
-.ags_list_table td.heading_code{
-	sbackground-color: #efefef;
-	color: #3A4569;
-	font-family: Courier, monospace;
-}
-.ags_list_table td.abbrev_code{
-	sbackground-color: #efefef;
-	color: #3A4569;
-	font-family: Courier, monospace;
-}
-.ags_list_table a{
-	text-decoration: none;
-	color: #333333;
-	sbackground-color: pink;
-	display: block;
-	ssoverflow: hidden;
-}
-.ags_list_table a:hover{
-	stext-decoration: underline;
-	color: #000099;	
-	ssbackground-color: cyan;
-}
-
-/***************************************************/
-/*  Page Footer */
-/***************************************************/
-#page_footer{
-	margin-top: 20px;
-	padding-top: 10px;
-	border-top: 1px solid #cccccc;
-	clear: both;
-}
-
-#page_footer a{
-	text-decoration: none;
-	color: #555555;
-	font-size: 9pt;
-}
-#page_footer a:hover{
-	text-decoration: underline;
-	color: black;
-}
