--- a/templates/viewer.html
+++ b/templates/viewer.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" charset="utf-8" src="/js/ags/examples/ExamplesDialog.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/UploadDialog.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/GroupGrid.js"></script>
+<script type="text/javascript" charset="utf-8" src="/js/ags/viewer/RawDataView.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/GroupView.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/ags/viewer/AGSViewer.js"></script>
 
