tidy up raw viewer

--- a/static/css/ags2go.1.css
+++ b/static/css/ags2go.1.css
@@ -9,7 +9,18 @@
 
 .ags_group_row {
 	background-color: #FFFBAC;
-	border-bottom: 1px solid #444444;
 	border-top: 1px solid #444444;
 }
+.ags_group_header {
+	background-color: #FFFDD7 !important;
+}
+.ags_group_data {
+	background-color: #DCFFA0 !important;
+}
 
+
+
+.ags_raw_text {
+	font-family: monospace;
+	font-size: 10pt;
+}
