--- a/templates/home.html
+++ b/templates/home.html
@@ -7,9 +7,23 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1>Welcome to AGS file format</h1>
-        <p>Blah blah about AGS and the file format TODO</p>
-        <p>The AGS file format is used extensively in geotechnical engineering. This site is experiment in creating a microservice online for all :=)</p>
+        <h1>Developers R&amp;D and experiments with the <a target="_ags_data" href="http://agsdataformat.com">AGS data format</a></h1>
+
+        <ul>
+        <li><a target="_ags" href="http://ags.org.uk">AGS</a> = <i><b>Association of Getotechnical &amp; Geoenviromental Specialists</b></i>
+            <small> [<a target="_ags" href="http://ags.org.uk">ags.org.uk</a>] </small>
+            </li>
+
+
+        <li>The <b><a target="_ags_data" href="http://agsdataformat.com">AGS data format</a></b>  <small>
+             [<a target="_ags_data" href="http://agsdataformat.com">agsdataformat.com</a>] </small>
+            is defined and maintained
+            by the AGS and is used extensively in geotechnical engineering, both UK and abroad.</li>
+
+        <li>This site is an experimental playground, and researching mad's idea online microservice for machine to machine interaction</li>
+        <li>This site has nothing to do with AGS as an organisation, is not endorsed etc. Instead,
+            intended as a demo for feedback and future possibilities moving forward. Basically don't use or rely on this virtual machine, ever!</li>
+        </ul>
         <p><a class="btn btn-primary btn-lg" href="/about" role="button">Learn more &raquo;</a></p>
     </div>
 </div>
@@ -18,9 +32,9 @@
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-4">
-            <h2>The AGS File Format</h2>
+            <h2>OFFICAL AGS Data</h2>
             <p>We are downstream from the "official upstream source" at http://www.agsdataformat.com/</p>
-            <p><a class="btn btn-default" href="http://www.agsdataformat.com/" role="button">AGS &raquo;</a></p>
+            <p><a class="btn btn-default" href="http://www.agsdataformat.com/" role="button">agsdataformat.com &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>AGS4 Data Dictionary</h2>
